# punycode

./: CMakeLists.txt
include/boost/punycode/: ascii_count.hpp  encode.hpp  idna.hpp  punycode.hpp  utf32_count.hpp  utf8_count.hpp  utf8_input.hpp  utf8_output.hpp
include/boost/punycode/detail/: config.hpp  except.hpp
src/: encode.cpp  idna.cpp  stringprep_b2.hpp
src/detail/: except.cpp
test/: CMakeLists.txt  encode.cpp  idna.cpp  punycode.cpp
